@@ -4,22 +4,29 @@
         {CLASS = ListView; LANGUAGE = ObjC; SUPERCLASS = NSTableView; }, 
         {CLASS = NSSegmentedControl; LANGUAGE = ObjC; SUPERCLASS = NSControl; }, 
         {
-            ACTIONS = {onAdd = id; onCancel = id; onDown = id; onEdit = id; onOk = id; onUp = id; }; 
+            ACTIONS = {
+                onAdd = id; 
+                onCancel = id; 
+                onDelete = id; 
+                onDown = id; 
+                onEdit = id; 
+                onOk = id; 
+                onUp = id; 
+            }; 
             CLASS = ServerDialog; 
             LANGUAGE = ObjC; 
             OUTLETS = {
                 addButton = id; 
                 "auto_connectCheck" = id; 
                 channelsTable = id; 
+                deleteButton = id; 
                 downButton = id; 
                 editButton = id; 
                 encodingCombo = id; 
                 hostCombo = id; 
                 invisibleCheck = id; 
-                leaveCommentText = id; 
-                loosenNickLengthCheck = id; 
+                "leaving_commentText" = id; 
                 nameText = id; 
-                nickLengthText = id; 
                 nickText = id; 
                 okButton = id; 
                 passwordText = id; 
