@@ -9,7 +9,7 @@ class ChannelDialog < OSX::NSObject
   
   attr_accessor :window
   attr_accessor :delegate, :prefix
-  attr_reader :uid, :cid
+  attr_reader :uid, :cid, :modal
   ib_mapped_outlet :nameText, :passwordText, :modeText, :topicText, :auto_joinCheck, :keywordCheck, :unreadCheck, :consoleCheck
   ib_outlet :okButton
   
@@ -21,11 +21,15 @@ class ChannelDialog < OSX::NSObject
     @c
   end
   
+  def loadNib
+    NSBundle.loadNibNamed_owner('ChannelDialog', self)
+  end
+  
   def start(config, uid, cid)
     @c = config.dup
     @uid = uid
     @cid = cid
-    NSBundle.loadNibNamed_owner('ChannelDialog', self)
+    loadNib
     if cid < 0
       @window.setTitle("New Channel")
     else
@@ -38,6 +42,35 @@ class ChannelDialog < OSX::NSObject
     load
     update
     show
+  end
+  
+  def start_sheet(owner, config, add=false)
+    @modal = true
+    @c = config.dup
+    loadNib
+    if add
+      @c.name = ''
+    else
+      @nameText.setEditable(false)
+      @nameText.setSelectable(false)
+      @nameText.setBezeled(false)
+      @nameText.setDrawsBackground(false)
+    end
+    load
+    update
+    NSApp.beginSheet_modalForWindow_modalDelegate_didEndSelector_contextInfo(@window, owner, self, 'sheetDidEnd:returnCode:contextInfo:', nil)
+  end
+  
+  objc_method :sheetDidEnd_returnCode_contextInfo, 'v@:@i^v'
+  def sheetDidEnd_returnCode_contextInfo(sender, code, info)
+    @window.orderOut(self)
+    @modal = false
+    if code != 0
+      save
+      fire_event('onOk', @c)
+    else
+      fire_event('onCancel')
+    end
   end
   
   def show
@@ -54,13 +87,21 @@ class ChannelDialog < OSX::NSObject
   end
   
   def onOk(sender)
-    save
-    fire_event('onOk', @c)
-    @window.close
+    if @modal
+      NSApp.endSheet_returnCode(@window, 1)
+    else
+      save
+      fire_event('onOk', @c)
+      @window.close
+    end
   end
   
   def onCancel(sender)
-    @window.close
+    if @modal
+      NSApp.endSheet_returnCode(@window, 0)
+    else
+      @window.close
+    end
   end
   
   def load
